# tarsim

./: Dockerfile  LICENSE  README.md  docker-compose.yml  setup.sh  tarsim
doc/: documentation.docx  figures.pptx
icons/: cadOff.ai  cadOn.ai  dec.ai  exit.ai  framesOff.ai  framesOn.ai  inc.ai  linesOff.ai  linesOn.ai  pathOff.ai  pathOn.ai  planesOff.ai  planesOn.ai  pointsOff.ai  pointsOn.ai  recordOff.ai  recordOn.ai  sixDof.ai  view.ai
python_prototype/: communication.py  gui.py  inc.py  kin_sim.py  kinematics.py  rigid_body_system_parser.py  simulator.py  transformations.py
python_prototype/config/: link.stl  protobuf.py  robot_2.py  robot_9.py
src/: CMakeLists.txt  document.odt  loggerMain.cpp  setup.sh  simApp.cpp
src/config/: CMakeLists.txt
src/config/protobufs/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/actorsRigidBody/: CMakeLists.txt  actorsRigidBody.cpp  actorsRigidBody.h
src/libs/collisionDetection/: CMakeLists.txt  boundingBoxBase.cpp  boundingBoxBase.h  boundingBoxCapsule.cpp  boundingBoxCapsule.h  boundingBoxCuboid.cpp  boundingBoxCuboid.h  boundingBoxSphere.cpp  boundingBoxSphere.h  collisionDetection.cpp  collisionDetection.h
src/libs/com/: CMakeLists.txt
src/libs/com/client/: CMakeLists.txt  tarsimClient.cpp  tarsimClient.h
src/libs/com/client/wrappers/python/: CMakeLists.txt  example.py  setup.py.in  tarsimClient.py  tarsimClientInterface.cpp
src/libs/com/client/wrappers/python/exposed/: CMakeLists.txt  tarsimClientExposed.cpp  tarsimClientExposed.h
src/libs/com/protocols/: CMakeLists.txt
src/libs/com/protocols/osMsg/: CMakeLists.txt
src/libs/com/protocols/osMsg/osMsgClient/: CMakeLists.txt
src/libs/com/protocols/osMsg/osMsgClient/osMsgClientReceiver/: CMakeLists.txt  eitOsMsgClientReceiver.cpp  eitOsMsgClientReceiver.h
src/libs/com/protocols/osMsg/osMsgClient/osMsgClientSender/: CMakeLists.txt  eitOsMsgClientSender.cpp  eitOsMsgClientSender.h
src/libs/com/protocols/osMsg/osMsgClient/osMsgClientSender/unittests/: main.cpp
src/libs/com/protocols/osMsg/osMsgServer/: CMakeLists.txt
src/libs/com/protocols/osMsg/osMsgServer/osMsgServerReceiver/: CMakeLists.txt  eitOsMsgServerReceiver.cpp  eitOsMsgServerReceiver.h
src/libs/com/protocols/osMsg/osMsgServer/osMsgServerSender/: CMakeLists.txt  eitOsMsgServerSender.cpp  eitOsMsgServerSender.h
src/libs/com/server/: CMakeLists.txt  eitServer.cpp  eitServer.h
src/libs/configParser/: CMakeLists.txt  configParser.cpp  configParser.h
src/libs/fileSystem/: CMakeLists.txt
src/libs/fileSystem/inc/: fileSystem.h
src/libs/fileSystem/src/: fileSystem.cpp
src/libs/gui/: CMakeLists.txt  gui.cpp  gui.h
src/libs/inc/: CMakeLists.txt  cmake_defs.h.in  eitErrors.h  osDef.h  serverDefs.h  simulatorMessages.h  threadQueue.h
src/libs/inc/protobufs/: CMakeLists.txt
src/libs/kinematics/: CMakeLists.txt  kinematics.cpp  kinematics.h
src/libs/logging/: CMakeLists.txt
src/libs/logging/logClient/: CMakeLists.txt
src/libs/logging/logClient/inc/: logClient.h
src/libs/logging/logClient/src/: logClient.cpp
src/libs/logging/logServer/: CMakeLists.txt
src/libs/logging/logServer/inc/: logServer.h
src/libs/logging/logServer/src/: logServer.cpp
src/libs/messaging/: CMakeLists.txt
src/libs/messaging/exitThread/: CMakeLists.txt  exitThread.cpp  exitThread.h
src/libs/messaging/msgQClient/: CMakeLists.txt
src/libs/messaging/msgQClient/inc/: msgQClient.h
src/libs/messaging/msgQClient/src/: msgQClient.cpp
src/libs/messaging/msgQServer/: CMakeLists.txt
src/libs/messaging/msgQServer/inc/: msgQServer.h
src/libs/messaging/msgQServer/src/: msgQServer.cpp
src/libs/node/: CMakeLists.txt  node.cpp  node.h
src/libs/object/: CMakeLists.txt  object.cpp  object.h
src/libs/scenes/: CMakeLists.txt  incCmdButton.cpp  incCmdButton.h  sceneBase.cpp  sceneBase.h  sceneButtons.cpp  sceneButtons.h  sceneEndEffectorFrame.cpp  sceneEndEffectorFrame.h  sceneFaults.cpp  sceneFaults.h  sceneJointValues.cpp  sceneJointValues.h  sceneRobot.cpp  sceneRobot.h  sceneSixDof.cpp  sceneSixDof.h  sceneSpeed.cpp  sceneSpeed.h
src/libs/tarsim/: CMakeLists.txt  tarsim.cpp  tarsim.h
src/libs/tarsim/example/: CMakeLists.txt
src/libs/threadUtils/: CMakeLists.txt
src/libs/threadUtils/inc/: threadUtilities.h
src/libs/threadUtils/src/: threadUtilities.cpp
src/libs/timers/: CMakeLists.txt
src/libs/timers/inc/: timerUtils.h
src/libs/timers/src/: timerUtils.cpp
src/samples/: CMakeLists.txt
src/samples/clientSample/: clientSample.cpp
src/samples/fanuc_LRM200iD/: Link_1.STL
src/samples/kuka_KR6/: Link_1.STL  Link_5.STL  prevJointValues.txt
src/samples/qt/: CMakeLists.txt
src/samples/scara/: prevJointValues.txt
user/client/inc/: ipcMessages.h  simulatorMessages.h  tarsimClient.h
user/client/samples/clientSample/: CMakeLists.txt  clientSample.cpp
user/client/samples/fanuc_LRM200iD/: Base.STL  Link_5.STL  rbs.txt
user/client/samples/kuka_KR6/: Link_2.STL  Link_3.STL
user/client/samples/proto/: common.proto  win.proto
user/client/samples/qt/: CMakeLists.txt  qtTarsim.cpp
user/client/samples/scara/: Object.STL  prevJointValues.txt  tool.txt  win.txt
user/server/example/: CMakeLists.txt  useTarsim.cpp
user/server/icons/: README.md
user/server/samples/fanuc_LRM200iD/: Link_2.STL  Link_3.STL  prevJointValues.txt  tool.txt  win.txt
user/server/samples/kuka_KR6/: Base.STL  Link_4.STL  Link_6.STL  rbs.txt  win.txt
user/server/samples/proto/: rbs.proto  win.proto
user/server/samples/scara/: Base.STL  Link_1.STL  Link_2.STL  Link_4.STL  prevJointValues.txt  rbs.txt
