add_subdirectory(inc)
add_subdirectory(actorsRigidBody)
add_subdirectory(node)
add_subdirectory(com)
add_subdirectory(configParser)
add_subdirectory(kinematics)
add_subdirectory(scenes)
add_subdirectory(gui)
add_subdirectory(fileSystem)
add_subdirectory(logging)
add_subdirectory(messaging)
add_subdirectory(threadUtils)
add_subdirectory(timers)
add_subdirectory(tarsim)
add_subdirectory(collisionDetection)
add_subdirectory(object)